--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles.css" rel="stylesheet">
 
 </head>
@@ -15,7 +16,7 @@
     </div>
     <form id="content">
       <label for="billtotal" class="item1">Bill Total:</label>
-      <input type="text" id="billtotal" name="billtotal" onchange="checkInput()" class="item2">
+      <input type="text" id="billtotal" name="billtotal" onchange="checkInput()" placeholder="please enter a number here ! " class="item2">
       <label for="tip" class="item1">Tip:</label>
       <input type="range" id="tip" name="tip" min="0" max="100" class="item2">
       <label for="tippercentage" class="item1">Tip Percentage:</label>
